Using the filter functional notation for background images results in wrong background-size rendering https://bugs.webkit.org/show_bug.cgi?id=148221 rdar://problem/22379518

Reviewed by Daniel Bates.

Do not ignore the size argument, when the filter image is being drawn onto the context.
When the size is ignored, we end up painting the image with its native size while the filter
is applied on the size of the generated image.

Source/WebCore:

Test: fast/filter-image/background-filter-image.html

* css/CSSFilterImageValue.cpp:
(WebCore::CSSFilterImageValue::image):

LayoutTests:

* fast/filter-image/background-filter-image-expected.html: Added.
* fast/filter-image/background-filter-image.html: Added.


Canonical link: https://commits.webkit.org/166553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188935 268f45cc-cd09-0410-ab3c-d52691b4dbfc